# cognitive-canvas

./: .coveragerc  .env.example  .gitignore  .safety-project.ini  Makefile  README.md  claude_desktop_config.json  main.py  pyproject.toml  pytest.ini.py  requirements.txt  run_tests.py
.github/workflows/: test.yml
config/: mcp_config.json  settings.py
docs/: api_reference.md  entity_relationship_diagram.md  installation.md  troubleshooting.md  usage_examples.md
scripts/: coverage_status.py  generate_coverage.py  migrate_data.py  setup_environment.py  test_integration.py
specs/: Complete_ContentGraph_MCP_Implementaion_Plan.md  ContentGraph MCP Implementaion Plan.md  contentgraph_design_document.md
src/: mcp_server.py
src/contentgraph_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/core/exceptions/: __init__.py  exceptions.py
src/models/: __init__.py  content.py  quiz.py  responses.py
src/services/: __init__.py  categorization_service.py  content_extractor.py  content_manager.py  embedding_service.py  quiz_service.py  vector_database.py
src/tools/: __init__.py  generate_quiz.py  query_content.py  store_content.py
src/utils/: error_handlers.py  validators.py
tests/: conftest.py  test_categorization_service.py  test_content_extractor.py  test_content_manager.py  test_embedding_service.py  test_mcp_tools.py  test_models.py  test_quiz_service.py  test_utils.py  test_vector_database.py
tests/fixtures/: sample_content.json  sample_urls.txt
