[project]
name = "contentgraph-mcp"
version = "0.1.0"
description = "MCP server for content management and quizzing"
authors = [
    {name = "Eyoel Feleke", email = "eyu2.wf@gmail.com"},
    {name = "Etsub Feleke", email = "etsub.wende@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.15",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "instructor>=1.10.0",
    "mcp>=1.12.1",
    "openai>=1.97.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sentence-transformers>=5.0.0",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.14.1",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "requests-mock>=1.12.1",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-report=term-missing",
    "--cov-branch",
    "--strict-markers",
    "-v"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]
